--- a/index.html
+++ b/index.html
@@ -2,15 +2,35 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>コピーBBS</title>
+<title>コピーBBSクライアント</title>
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-<script src="main.js" defer></script>
+<link rel="stylesheet" href="style.css">
+<style>
+body { font-family: sans-serif; max-width: 700px; margin: auto; padding: 20px; }
+.post { border: 1px solid #ccc; border-radius: 5px; margin-bottom: 10px; padding: 10px; }
+.header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 5px; }
+.name { font-weight: bold; }
+.seed { font-size: 0.9em; color: #666; margin-left: 5px; }
+.timestamp { font-size: 0.8em; color: #999; }
+.content { margin-top: 5px; white-space: pre-wrap; }
+#new-post { margin-top: 20px; display: flex; flex-direction: column; gap: 5px; }
+input, textarea { width: 100%; padding: 5px; border-radius: 3px; border: 1px solid #ccc; }
+button { padding: 5px 10px; border-radius: 3px; cursor: pointer; }
+</style>
 </head>
 <body>
-<h1>コピーBBS</h1>
+
+<h1>コピーBBSクライアント</h1>
+
 <div id="posts"></div>
-<input id="name" placeholder="名前">
-<input id="text" placeholder="投稿内容">
-<button id="sendBtn">送信</button>
+
+<div id="new-post">
+    <input type="text" id="name" placeholder="名前">
+    <input type="text" id="seed" placeholder="シード (自分で決める)">
+    <textarea id="content" rows="3" placeholder="投稿内容"></textarea>
+    <button id="sendBtn">送信</button>
+</div>
+
+<script src="main.js"></script>
 </body>
 </html>
