--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   .admin { color: red; }
 </style>
 <script src="/socket.io/socket.io.js"></script>
+<script src="main.js"></script>
 </head>
 <body>
 
