--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
 <form id="post-form">
   <input id="name" type="text" placeholder="名前" maxlength="50">
-  <input id="seed" type="text" placeholder="シード（自分で決める）" maxlength="8">
-
+  <input id="password" type="password" placeholder="パスワード">
   <textarea id="text" placeholder="投稿内容"></textarea>
   <button type="submit">送信</button>
   <button type="button" id="refresh">最新を取得</button>
 </form>
+
 
 <table>
   <thead>
