--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>投稿システム</title>
+    <title>黙れ小僧</title>
     <style>
       table { width: 100%; border-collapse: collapse; }
       th, td { border: 1px solid #ddd; padding: 8px; }
@@ -15,7 +15,7 @@
     <script src="./bbs.js" defer></script>
   </head>
   <body>
-    <h1>DeproyBBS 2</h1>
+    <h1>damarekozou</h1>
     <form id="post-form">
       <input id="name" type="text" placeholder="名前（任意）" maxlength="50"/>
       <input id="seed" type="password" placeholder="パスワード（任意）"/>
@@ -23,7 +23,7 @@
       <button type="submit">投稿</button>
       <button type="button" id="refresh">最新を取得</button>
       <div class="note">
-        <h5 id="topic">新しい投稿が出ないときは最新を取得ボタンを押してね！</h5>
+        <h5 id="topic">damare</h5>
       </div>
     </form>
     <table id="posts" class="posts">
