--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       background: #f0f0f0;
     }
   </style>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://damarekozou.onrender.com/socket.io/socket.io.js"></script>
   <script src="main.js" defer></script>
 </head>
 <body>
